--- a/index.html
+++ b/index.html
@@ -2,36 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Generador de QR - Lista de Asistencia</title>
+    <title>Acceso al formulario</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Generador de QR de Reunión</h1>
-<label>Duración del QR (minutos):</label>
-<input type="number" id="qrDuracion" value="15" min="1" max="120">
-<button id="generarQR">Generar QR</button>
-<div id="qr"></div>
-
-<script src="qrcode.min.js"></script>
-<script>
-    document.getElementById("generarQR").addEventListener("click", () => {
-        const duracion = parseInt(document.getElementById("qrDuracion").value);
-        const sessionId = "session_" + Date.now();
-        const exp = Math.floor(Date.now()/1000) + duracion*60;
-
-        // 🔹 URL pública de tu app en Vercel
-        const hostingURL = "https://l-ista-asistencia.vercel.app";
-        const urlQR = `${hostingURL}/asistencia.html?sessionId=${sessionId}&exp=${exp}`;
-
-        document.getElementById("qr").innerHTML = "";
-        new QRCode(document.getElementById("qr"), {
-            text: urlQR,
-            width: 200,
-            height: 200
-        });
-
-        alert(`✅ QR generado con vigencia de ${duracion} minutos.`);
-    });
-</script>
+<h1>Formulario de Asistencia</h1>
+<p>Haz clic en el siguiente enlace para registrar tu asistencia:</p>
+<a href="https://l-ista-asistencia.vercel.app/asistencia.html" target="_blank">
+    Abrir formulario
+</a>
 </body>
 </html>
