--- a/index.html
+++ b/index.html
@@ -1,186 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Registro de Asistencia</title>
+    <meta charset="UTF-8">
+    <title>Generador de QR - Lista de Asistencia</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<!-- HEADER: logos -->
-<header class="header">
-    <img src="Logos.png" alt="Marina" class="logo">
+<h1>Generador de QR de Reunión</h1>
+<label>Duración del QR (minutos):</label>
+<input type="number" id="qrDuracion" value="15" min="1" max="120">
+<button id="generarQR">Generar QR</button>
+<div id="qr"></div>
 
-</header>
-
-<!-- Encabezado central -->
-<section class="hero">
-    <h1>Registro de Asistencia</h1>
-    <p class="sub">Por favor complete sus datos y firme al final</p>
-</section>
-
-<!-- FORMULARIO -->
-<main>
-    <form id="asistenciaForm" class="form-card">
-        <div class="field">
-            <label for="nombre">Nombre</label>
-            <input id="nombre" name="nombre" type="text" required />
-        </div>
-
-        <div class="field">
-            <label for="correo">Correo</label>
-            <input id="correo" name="correo" type="email" required />
-        </div>
-
-        <div class="field">
-            <label for="empresa">Empresa</label>
-            <input id="empresa" name="empresa" type="text" required />
-        </div>
-
-        <div class="field">
-            <label for="telefono">Teléfono</label>
-            <input id="telefono" name="telefono" type="tel" required />
-        </div>
-
-        <div class="field">
-            <label>Firma</label>
-            <canvas id="signature-pad" class="signature-pad"></canvas>
-            <div class="signature-controls">
-                <button type="button" id="clearBtn" class="btn btn-ghost">Borrar firma</button>
-                <small class="hint">Firma con dedo o mouse</small>
-            </div>
-        </div>
-
-        <div class="actions">
-            <button id="submitBtn" type="button" class="btn">Registrar asistencia</button>
-        </div>
-
-        <p id="status" class="status" aria-live="polite"></p>
-    </form>
-</main>
-
-<!-- FOOTER: logo año de la mujer -->
-
-
-<!-- Librería SignaturePad -->
-<script src="https://cdn.jsdelivr.net/npm/signature_pad@4.0.0/dist/signature_pad.umd.min.js"></script>
-<!-- Supabase JS -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
+<script src="qrcode.min.js"></script>
 <script>
-    // ========================
-    // CONFIGURACIÓN SUPABASE
-    // ========================
-    const SUPABASE_URL = "https://kdacskidrbbqbstizekl.supabase.co";
-    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtkYWNza2lkcmJicWJzdGl6ZWtsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjExNTQ1NDIsImV4cCI6MjA3NjczMDU0Mn0.SqnbCRbwI4EWYp14VAF8HR5cSmeaF4FNI5bUVOCuD0wM";
-    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+    document.getElementById("generarQR").addEventListener("click", () => {
+        const duracion = parseInt(document.getElementById("qrDuracion").value);
+        const sessionId = "session_" + Date.now();
+        const exp = Math.floor(Date.now()/1000) + duracion*60;
 
-    // ========================
-    // ELEMENTOS DOM
-    // ========================
-    const canvas = document.getElementById("signature-pad");
-    const clearBtn = document.getElementById("clearBtn");
-    const submitBtn = document.getElementById("submitBtn");
-    const statusEl = document.getElementById("status");
+        // 🔹 URL pública de tu app en Vercel
+        const hostingURL = "https://l-ista-asistencia.vercel.app";
+        const urlQR = `${hostingURL}/asistencia.html?sessionId=${sessionId}&exp=${exp}`;
 
-    // Ajustar tamaño del canvas para pantallas con devicePixelRatio
-    function resizeCanvas() {
-        const ratio = Math.max(window.devicePixelRatio || 1, 1);
-        // mantener tamaño visual definido por CSS; recalcula pixeles reales
-        canvas.width = Math.floor(canvas.offsetWidth * ratio);
-        canvas.height = Math.floor(canvas.offsetHeight * ratio);
-        const ctx = canvas.getContext("2d");
-        ctx.scale(ratio, ratio);
-    }
+        document.getElementById("qr").innerHTML = "";
+        new QRCode(document.getElementById("qr"), {
+            text: urlQR,
+            width: 200,
+            height: 200
+        });
 
-    // Iniciar SignaturePad
-    resizeCanvas();
-    const sigPad = new SignaturePad(canvas, { backgroundColor: 'rgb(255,255,255)' });
-
-    window.addEventListener('resize', () => {
-        // al redimensionar se borra la firma para mantener escalado correcto
-        resizeCanvas();
-        sigPad.clear();
+        alert(`✅ QR generado con vigencia de ${duracion} minutos.`);
     });
-
-    clearBtn.addEventListener('click', () => {
-        sigPad.clear();
-    });
-
-    // Obtener sessionId desde querystring si existe (opcional)
-    const urlParams = new URLSearchParams(window.location.search);
-    const sessionId = urlParams.get('sessionId') || null;
-
-    // ========================
-    // Función principal: grabar firma -> storage -> insertar registro
-    // ========================
-    async function registrarAsistencia() {
-        statusEl.textContent = '';
-        submitBtn.disabled = true;
-        submitBtn.textContent = 'Registrando...';
-
-        try {
-            // Validaciones básicas
-            const nombre = document.getElementById('nombre').value.trim();
-            const correo = document.getElementById('correo').value.trim();
-            const empresa = document.getElementById('empresa').value.trim();
-            const telefono = document.getElementById('telefono').value.trim();
-
-            if (!nombre || !correo || !empresa || !telefono) {
-                statusEl.textContent = 'Por favor completa todos los campos.';
-                submitBtn.disabled = false;
-                submitBtn.textContent = 'Registrar asistencia';
-                return;
-            }
-
-            if (sigPad.isEmpty()) {
-                statusEl.textContent = 'Por favor firma antes de enviar.';
-                submitBtn.disabled = false;
-                submitBtn.textContent = 'Registrar asistencia';
-                return;
-            }
-
-            // Convertir la firma a blob
-            const dataURL = sigPad.toDataURL('image/png');
-            const res = await fetch(dataURL);
-            const blob = await res.blob();
-
-            // Nombre de archivo único
-            const safeName = nombre.replace(/\s+/g, '_').replace(/[^a-zA-Z0-9_-]/g, '');
-            const archivo = `firmas/${Date.now()}_${safeName}.png`;
-
-            // Subir a Supabase Storage (bucket 'firmas')
-            const { error: uploadError } = await supabase.storage
-                .from('firmas')
-                .upload(archivo, blob, { contentType: 'image/png' });
-
-            if (uploadError) throw uploadError;
-
-            // Obtener URL pública
-            const { data: publicUrlData } = supabase.storage.from('firmas').getPublicUrl(archivo);
-            const firma_url = publicUrlData.publicUrl || null;
-
-            // Insertar en la tabla 'asistencias'
-            const { error: insertError } = await supabase
-                .from('asistencias')
-                .insert([{ nombre, correo, empresa, telefono, firma_url, session_id: sessionId }]);
-
-            if (insertError) throw insertError;
-
-            statusEl.textContent = '✅ Asistencia registrada correctamente.';
-            // limpiar form
-            document.getElementById('asistenciaForm').reset();
-            sigPad.clear();
-        } catch (err) {
-            console.error('Error al subir firma / insertar registro:', err);
-            statusEl.textContent = '❌ Error al registrar asistencia. Revisa la consola.';
-        } finally {
-            submitBtn.disabled = false;
-            submitBtn.textContent = 'Registrar asistencia';
-        }
-    }
-
-    submitBtn.addEventListener('click', registrarAsistencia);
 </script>
 </body>
 </html>
