--- a/asistencia.html
+++ b/asistencia.html
@@ -1,79 +1,12 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Registro de Asistencia</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<!-- HEADER: logos -->
-<header class="header">
-    <img src="Logos.png" alt="Marina" class="logo">
+<script type="module">
+    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
 
-</header>
-
-<!-- Encabezado central -->
-<section class="hero">
-    <h1>Registro de Asistencia</h1>
-    <p class="sub">Por favor complete sus datos y firme al final</p>
-</section>
-
-<!-- FORMULARIO -->
-<main>
-    <form id="asistenciaForm" class="form-card">
-        <div class="field">
-            <label for="nombre">Nombre</label>
-            <input id="nombre" name="nombre" type="text" required />
-        </div>
-
-        <div class="field">
-            <label for="correo">Correo</label>
-            <input id="correo" name="correo" type="email" required />
-        </div>
-
-        <div class="field">
-            <label for="empresa">Empresa</label>
-            <input id="empresa" name="empresa" type="text" required />
-        </div>
-
-        <div class="field">
-            <label for="telefono">Teléfono</label>
-            <input id="telefono" name="telefono" type="tel" required />
-        </div>
-
-        <div class="field">
-            <label>Firma</label>
-            <canvas id="signature-pad" class="signature-pad"></canvas>
-            <div class="signature-controls">
-                <button type="button" id="clearBtn" class="btn btn-ghost">Borrar firma</button>
-                <small class="hint">Firma con dedo o mouse</small>
-            </div>
-        </div>
-
-        <div class="actions">
-            <button id="submitBtn" type="button" class="btn">Registrar asistencia</button>
-        </div>
-
-        <p id="status" class="status" aria-live="polite"></p>
-    </form>
-</main>
-
-<!-- FOOTER: logo año de la mujer -->
-
-
-<!-- Librería SignaturePad -->
-<script src="https://cdn.jsdelivr.net/npm/signature_pad@4.0.0/dist/signature_pad.umd.min.js"></script>
-<!-- Supabase JS -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
-<script>
     // ========================
     // CONFIGURACIÓN SUPABASE
     // ========================
     const SUPABASE_URL = "https://kdacskidrbbqbstizekl.supabase.co";
     const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtkYWNza2lkcmJicWJzdGl6ZWtsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjExNTQ1NDIsImV4cCI6MjA3NjczMDU0Mn0.SqnbCRbwI4EWYp14VAF8HR5cSmeaF4FNI5bUVOCuD0wM";
-    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+    const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
 
     // ========================
     // ELEMENTOS DOM
@@ -83,36 +16,31 @@
     const submitBtn = document.getElementById("submitBtn");
     const statusEl = document.getElementById("status");
 
-    // Ajustar tamaño del canvas para pantallas con devicePixelRatio
+    // Ajustar tamaño del canvas
     function resizeCanvas() {
         const ratio = Math.max(window.devicePixelRatio || 1, 1);
-        // mantener tamaño visual definido por CSS; recalcula pixeles reales
         canvas.width = Math.floor(canvas.offsetWidth * ratio);
         canvas.height = Math.floor(canvas.offsetHeight * ratio);
         const ctx = canvas.getContext("2d");
         ctx.scale(ratio, ratio);
     }
 
-    // Iniciar SignaturePad
     resizeCanvas();
     const sigPad = new SignaturePad(canvas, { backgroundColor: 'rgb(255,255,255)' });
 
     window.addEventListener('resize', () => {
-        // al redimensionar se borra la firma para mantener escalado correcto
         resizeCanvas();
         sigPad.clear();
     });
 
-    clearBtn.addEventListener('click', () => {
-        sigPad.clear();
-    });
+    clearBtn.addEventListener('click', () => sigPad.clear());
 
-    // Obtener sessionId desde querystring si existe (opcional)
+    // Obtener sessionId si existe
     const urlParams = new URLSearchParams(window.location.search);
     const sessionId = urlParams.get('sessionId') || null;
 
     // ========================
-    // Función principal: grabar firma -> storage -> insertar registro
+    // FUNCION PRINCIPAL
     // ========================
     async function registrarAsistencia() {
         statusEl.textContent = '';
@@ -120,7 +48,6 @@
         submitBtn.textContent = 'Registrando...';
 
         try {
-            // Validaciones básicas
             const nombre = document.getElementById('nombre').value.trim();
             const correo = document.getElementById('correo').value.trim();
             const empresa = document.getElementById('empresa').value.trim();
@@ -140,7 +67,7 @@
                 return;
             }
 
-            // Convertir la firma a blob
+            // Convertir firma a blob
             const dataURL = sigPad.toDataURL('image/png');
             const res = await fetch(dataURL);
             const blob = await res.blob();
@@ -149,18 +76,22 @@
             const safeName = nombre.replace(/\s+/g, '_').replace(/[^a-zA-Z0-9_-]/g, '');
             const archivo = `firmas/${Date.now()}_${safeName}.png`;
 
-            // Subir a Supabase Storage (bucket 'firmas')
-            const { error: uploadError } = await supabase.storage
+            // Subir a Supabase Storage con upsert
+            const { data: uploadData, error: uploadError } = await supabase.storage
                 .from('firmas')
-                .upload(archivo, blob, { contentType: 'image/png' });
+                .upload(archivo, blob, { contentType: 'image/png', upsert: true });
 
             if (uploadError) throw uploadError;
 
             // Obtener URL pública
-            const { data: publicUrlData } = supabase.storage.from('firmas').getPublicUrl(archivo);
-            const firma_url = publicUrlData.publicUrl || null;
+            const { data: publicUrlData, error: urlError } = supabase.storage
+                .from('firmas')
+                .getPublicUrl(archivo);
 
-            // Insertar en la tabla 'asistencias'
+            if (urlError) throw urlError;
+            const firma_url = publicUrlData.publicUrl;
+
+            // Insertar registro en tabla 'asistencias'
             const { error: insertError } = await supabase
                 .from('asistencias')
                 .insert([{ nombre, correo, empresa, telefono, firma_url, session_id: sessionId }]);
@@ -168,9 +99,9 @@
             if (insertError) throw insertError;
 
             statusEl.textContent = '✅ Asistencia registrada correctamente.';
-            // limpiar form
             document.getElementById('asistenciaForm').reset();
             sigPad.clear();
+
         } catch (err) {
             console.error('Error al subir firma / insertar registro:', err);
             statusEl.textContent = '❌ Error al registrar asistencia. Revisa la consola.';
@@ -182,5 +113,3 @@
 
     submitBtn.addEventListener('click', registrarAsistencia);
 </script>
-</body>
-</html>
