--- a/asistencia.html
+++ b/asistencia.html
@@ -5,51 +5,57 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Registro de Asistencia</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Tamaño fijo del canvas para que SignaturePad funcione correctamente */
+        .signature-pad {
+            border: 1px solid #ccc;
+            width: 100%;
+            max-width: 500px;
+            height: 200px;
+        }
+    </style>
 </head>
 <body>
-<!-- HEADER -->
 <header class="header">
-    <img src="Logos.png" alt="Marina" class="logo">
-
+    <img src="marina.png" alt="Marina" class="logo">
+    <img src="marina_grupo.png" alt="Grupo Aeroportuario" class="logo">
+    <img src="aicm.png" alt="AICM" class="logo">
 </header>
 
-<!-- ENCABEZADO -->
 <section class="hero">
     <h1>Registro de Asistencia</h1>
     <p class="sub">Por favor complete sus datos y firme al final</p>
 </section>
 
-<!-- FORMULARIO -->
 <main>
     <form id="asistenciaForm" class="form-card">
         <div class="field">
             <label for="nombre">Nombre</label>
-            <input id="nombre" name="nombre" type="text" required />
+            <input id="nombre" type="text" required>
         </div>
         <div class="field">
             <label for="correo">Correo</label>
-            <input id="correo" name="correo" type="email" required />
+            <input id="correo" type="email" required>
         </div>
         <div class="field">
             <label for="empresa">Empresa</label>
-            <input id="empresa" name="empresa" type="text" required />
+            <input id="empresa" type="text" required>
         </div>
         <div class="field">
             <label for="telefono">Teléfono</label>
-            <input id="telefono" name="telefono" type="tel" required />
+            <input id="telefono" type="tel" required>
         </div>
         <div class="field">
             <label>Firma</label>
             <canvas id="signature-pad" class="signature-pad"></canvas>
-            <div class="signature-controls">
-                <button type="button" id="clearBtn" class="btn btn-ghost">Borrar firma</button>
-                <small class="hint">Firma con dedo o mouse</small>
+            <div>
+                <button type="button" id="clearBtn">Borrar firma</button>
             </div>
         </div>
         <div class="actions">
-            <button id="submitBtn" type="button" class="btn">Registrar asistencia</button>
+            <button type="button" id="submitBtn">Registrar asistencia</button>
         </div>
-        <p id="status" class="status" aria-live="polite"></p>
+        <p id="status"></p>
     </form>
 </main>
 
@@ -57,46 +63,41 @@
     <img src="ano_mujer.png" alt="Año de la Mujer" class="logo-footer">
 </footer>
 
-<!-- Librerías -->
 <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.0.0/dist/signature_pad.umd.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <script>
-    // ========================
     // CONFIGURACIÓN SUPABASE
-    // ========================
     const SUPABASE_URL = "https://kdacskidrbbqbstizekl.supabase.co";
     const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtkYWNza2lkcmJicWJzdGl6ZWtsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjExNTQ1NDIsImV4cCI6MjA3NjczMDU0Mn0.SqnbCRbwI4EWYp14VAF8HR5cSmeaF4FNI5bUVOCuD0wM";
     const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-    // ========================
-    // ELEMENTOS DOM
-    // ========================
-    const canvas = document.getElementById("signature-pad");
-    const clearBtn = document.getElementById("clearBtn");
-    const submitBtn = document.getElementById("submitBtn");
-    const statusEl = document.getElementById("status");
+    const canvas = document.getElementById('signature-pad');
+    const clearBtn = document.getElementById('clearBtn');
+    const submitBtn = document.getElementById('submitBtn');
+    const statusEl = document.getElementById('status');
 
-    // Ajustar canvas a devicePixelRatio
-    function resizeCanvas() {
+    // Ajustar canvas a tamaño fijo para SignaturePad
+    function prepareCanvas() {
         const ratio = Math.max(window.devicePixelRatio || 1, 1);
         canvas.width = canvas.offsetWidth * ratio;
         canvas.height = canvas.offsetHeight * ratio;
-        canvas.getContext('2d').scale(ratio, ratio);
+        const ctx = canvas.getContext('2d');
+        ctx.scale(ratio, ratio);
     }
-    resizeCanvas();
 
-    const signaturePad = new SignaturePad(canvas, { backgroundColor: 'rgb(255,255,255)' });
-
+    prepareCanvas();
     window.addEventListener('resize', () => {
-        resizeCanvas();
+        prepareCanvas();
         signaturePad.clear();
     });
 
+    // Inicializar SignaturePad
+    const signaturePad = new SignaturePad(canvas, { backgroundColor: 'rgb(255,255,255)' });
+
     clearBtn.addEventListener('click', () => signaturePad.clear());
 
-    const urlParams = new URLSearchParams(window.location.search);
-    const sessionId = urlParams.get('sessionId') || null;
+    const sessionId = new URLSearchParams(window.location.search).get('sessionId') || null;
 
     async function registrarAsistencia() {
         statusEl.textContent = '';
@@ -123,30 +124,27 @@
                 return;
             }
 
-            // Convertir firma a blob
+            // Convertir la firma a blob correctamente
             const dataURL = signaturePad.toDataURL('image/png');
             const blob = await (await fetch(dataURL)).blob();
 
-            // Nombre único para el archivo
             const safeName = nombre.replace(/\s+/g, '_').replace(/[^a-zA-Z0-9_-]/g, '');
             const archivo = `firmas/${Date.now()}_${safeName}.png`;
 
-            // Subir a Supabase Storage con upsert
             const { error: uploadError } = await supabase.storage
                 .from('firmas')
                 .upload(archivo, blob, { contentType: 'image/png', upsert: true });
 
             if (uploadError) throw uploadError;
 
-            // Obtener URL pública
             const { data: publicUrlData, error: urlError } = supabase.storage
                 .from('firmas')
                 .getPublicUrl(archivo);
 
             if (urlError) throw urlError;
+
             const firma_url = publicUrlData.publicUrl;
 
-            // Insertar registro en tabla
             const { error: insertError } = await supabase
                 .from('asistencias')
                 .insert([{ nombre, correo, empresa, telefono, firma_url, session_id: sessionId }]);
@@ -156,6 +154,7 @@
             statusEl.textContent = '✅ Asistencia registrada correctamente.';
             document.getElementById('asistenciaForm').reset();
             signaturePad.clear();
+
         } catch (err) {
             console.error('Error al registrar:', err);
             statusEl.textContent = '❌ Error al registrar asistencia. Revisa la consola.';
