--- a/asistencia.html
+++ b/asistencia.html
@@ -8,9 +8,8 @@
 </head>
 <body>
 <header class="header">
-    <img src="marina.png" alt="Marina" class="logo">
-    <img src="marina_grupo.png" alt="Grupo Aeroportuario" class="logo">
-    <img src="aicm.png" alt="AICM" class="logo">
+    <img src="Logos.png" alt="Marina" class="logo">
+
 </header>
 
 <section class="hero">
@@ -57,9 +56,7 @@
     </form>
 </main>
 
-<footer class="footer">
-    <img src="ano_mujer.png" alt="Año de la Mujer" class="logo-footer">
-</footer>
+
 
 <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.0.0/dist/signature_pad.umd.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
